Add version node version to toXContent